DeployStrategy/k8s/sticky-sessions/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: sticky-session
  name: sticky-session-ingress
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/affinity-mode: "balanced"
    nginx.ingress.kubernetes.io/session-cookie-name: "sticky-session-cookie"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "60"
spec:
  ingressClassName: nginx
  rules:
    - host: sticky-session.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sticky-session-service
                port:
                  number: 8080
